# CHORM

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
.github/: FUNDING.yml  docker-compose.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/docker/clickhouse/: config.xml
.github/workflows/: ci.yml  publish.yml  tests.yml
chorm/: __init__.py  _context_managers.py  async_engine.py  async_pool.py  async_session.py  auto_migration.py  batch.py  batch_optimized.py  cli.py  codecs.py  ddl.py  declarative.py  engine.py  exceptions.py  health.py  introspection.py  metadata.py  metrics.py  migration.py  pool.py  profiler.py  query_cache.py  query_settings.py  result.py  retry.py  session.py  table_engines.py  types.py  utils.py  validators.py
chorm/sql/: __init__.py  compiler.py  ddl.py  dml.py  explain.py  expression.py  selectable.py
docs/: best_practices.md  clickhouse_indexes_guide.md  performance.md  validation_guide.md
examples/: analytics_cookbook.py  array_join_demo.py  async_session_example.py  batch_insert_demo.py  codecs_demo.py  cte_demo.py  group_by_demo.py  joins_demo.py  metadata_demo.py  monitoring_demo.py  multi_database_demo.py  query_optimization_demo.py  quick_wins_demo.py  result_api_demo.py  streaming_demo.py  subqueries_demo.py  verify_sql.py  window_functions_demo.py
tests/: test_advanced_aggregates.py  test_aggregate_function_combinators.py  test_aggregate_function_type.py  test_array_join.py  test_asof_join.py  test_async_engine_smoke.py  test_async_pool.py  test_auto_migration_mv.py  test_batch.py  test_batch_optimized.py  test_clickhouse_functions.py  test_codec_support.py  test_complex_analytics.py  test_conditional_functions.py  test_conditional_functions_in_select.py  test_conditional_logic.py  test_connection_context_manager.py  test_connection_params.py  test_connection_pool.py  test_ctes.py  test_ddl_operations.py  test_dictionary.py  test_engine_pooling.py  test_engine_smoke.py  test_exceptions.py  test_explain.py  test_expressions.py  test_group_by.py  test_health.py  test_indexes_enhanced.py  test_integration_codecs.py  test_introspection_aggregate_function.py  test_joins.py  test_limit_by.py  test_materialized_views.py  test_materialized_views_introspection.py  test_metadata.py  test_metrics.py  test_migration.py  test_native_types.py  (+26 more)
tests/integration/: test_advanced_aggregates_integration.py  test_aggregate_function_integration.py  test_array_join_integration.py  test_cli_introspect.py  test_clickhouse_functions_integration.py  test_comprehensive_types.py  test_conditional_functions_integration.py  test_crud_integration.py  test_ctes_integration.py  test_database_support.py  test_ddl_integration.py  test_ddl_operations_integration.py  test_distributed_integration.py  test_group_by_integration.py  test_introspection_integration.py  test_joins_integration.py  test_materialized_views_integration.py  test_mv_to_table_flow.py  test_performance_integration.py  test_pool_integration.py  test_replacing_mergetree.py  test_result_api_integration.py  test_streaming_integration.py  test_subqueries_integration.py  test_window_functions_integration.py
