[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clickhouse-chorm"
version = "0.3.0"
description = "A modern, type-safe ORM for ClickHouse with full support for ClickHouse-specific features"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Vitaly Zwick", email = "zwickvitaly@gmail.com" }
]
keywords = [
    "clickhouse",
    "orm",
    "database",
    "async",
    "sql",
    "query-builder",
    "mergetree",
    "analytics",
    "olap",
    "data-warehouse"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Database",
    "Topic :: Database :: Front-Ends",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]

dependencies = [
    "clickhouse-connect[async]>=1.1.1",
]

[project.optional-dependencies]
pandas = [
    "pandas>=2.3.3",
]
dev = [
    "ruff>=0.15.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.3.0",
]

[project.urls]
Homepage = "https://github.com/zwickvitaly/chorm"
Repository = "https://github.com/zwickvitaly/chorm"
Issues = "https://github.com/zwickvitaly/chorm/issues"
Changelog = "https://github.com/zwickvitaly/chorm/blob/main/CHANGELOG.md"
Documentation = "https://github.com/zwickvitaly/chorm#readme"

[project.scripts]
chorm = "chorm.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = [
    ".eggs",
    ".git",
    ".mypy_cache",
    ".tox",
    ".venv",
    "build",
    "dist",
    "examples",
    "docs",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",    # line too long — handled by formatter
    "UP006",   # Use builtin type (Dict->dict etc.) — keep for readability with from __future__
    "UP007",   # Use X | Y — already using modern syntax where needed
    "UP035",   # deprecated typing imports — keep compat with from __future__ import annotations
    "UP037",   # quoted annotation — keep explicit style
    "UP045",   # Optional[X] -> X | None — keep explicit Optional style
    "UP046",   # PEP 695 generic class — too new, keep TypeVar
    "RUF012",  # mutable class default — intentional in declarative metaclass
]

[tool.ruff.lint.per-file-ignores]
"chorm/__init__.py" = ["F401", "E402"]  # re-exports
"tests/**" = ["B", "SIM", "RUF", "E402", "F841", "F811", "E722", "F401", "W291", "F821"]        # relaxed for tests

[tool.ruff.lint.isort]
known-first-party = ["chorm"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.hatch.build.targets.wheel]
packages = ["chorm"]

[tool.hatch.build.targets.sdist]
include = [
    "/chorm",
    "/docs",
    "/examples",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
    "/pyproject.toml",
]
